<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="enadesimulado.studio.rafael.enadesimulado.Activity.LoginActivity"
        android:background="@color/teste1" android:gravity="center_vertical|center_horizontal">

    <ImageView
            android:layout_width="@dimen/largura_logo"
            android:layout_height="@dimen/altura_logo" app:srcCompat="@drawable/logo_login" android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" android:id="@+id/imageView" android:contentDescription="@drawable/logo_login"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_below="@+id/imageView" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_marginTop="41dp" android:id="@+id/edit_login_email"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
            android:hint="@string/digite_seu_email" android:textColor="@android:color/white"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_below="@+id/edit_login_email" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_marginTop="17dp" android:id="@+id/edit_login_senha"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
            android:hint="@string/digite_sua_senha" android:textColor="@android:color/white"/>
    <Button
            android:text="@string/btn_Logar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_below="@+id/edit_login_senha"
            android:layout_marginTop="20dp" android:id="@+id/bt_logar" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    <TextView
            android:text="@string/texto_cadastre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_below="@+id/bt_logar"
            android:layout_centerHorizontal="true" android:id="@+id/textView" android:textColor="@android:color/white"
            android:onClick="abrirCadastroUsuario"/>
</RelativeLayout>
