<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_cadastro_usuario"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="enadesimulado.studio.rafael.enadesimulado.Activity.CadastroUsuarioActivity"
        android:background="@color/teste1" android:gravity="center_vertical|center_horizontal">

    <ImageView
            android:layout_width="@dimen/largura_Cadusuario"
            android:layout_height="@dimen/altura_Cadusuario" app:srcCompat="@drawable/usuario" android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" android:id="@+id/questoes_imv"
            android:contentDescription="@drawable/usuario"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_below="@+id/edit_cadastro_nome" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_marginTop="22dp" android:id="@+id/edit_cadastro_email"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
            android:hint="@string/digite_seu_email" android:textColor="@android:color/white"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_below="@+id/edit_cadastro_email" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_marginTop="27dp" android:id="@+id/edit_cadastro_senha"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
            android:hint="@string/digite_sua_senha" android:textColor="@android:color/white"/>
    <Button
            android:text="@string/btn_Cadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_below="@+id/edit_cadastro_senha"
            android:layout_marginTop="16dp" android:id="@+id/bt_cadastrar" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edit_cadastro_nome"
            android:hint="@string/digite_seu_nomeCadastro" android:layout_below="@+id/questoes_imv"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:layout_marginTop="42dp" android:textColor="@android:color/white"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true"/>
</RelativeLayout>
